# qwen3vl-speculative-decoding-dgx-spark

./: .gitignore  README.md  pyproject.toml  setup.sh  start_server.sh
concepts/: 01_what_is_speculative_decoding.md  02_ngram_explained.md  03_draft_target_explained.md  04_eagle3_explained.md
data/: questions.json
results/: baseline.json  draft_target.json  eagle3.json  ngram.json
src/: benchmark_compare.py  benchmark_harness.py  question_loader.py  run_client.py
